--- a/pom.xml
+++ b/pom.xml
@@ -6,7 +6,11 @@
 
   <groupId>com.ntloc</groupId>
   <artifactId>microservices</artifactId>
+  <packaging>pom</packaging>
   <version>1.0-SNAPSHOT</version>
+  <modules>
+    <module>customer</module>
+  </modules>
 
   <name>microservices</name>
   <!-- FIXME change it to the project's website -->
