--- a/customer/src/main/resources/application.yml
+++ b/customer/src/main/resources/application.yml
@@ -1,7 +1,9 @@
+#Server
 server:
   port: 8010
   error:
     include-message: always
+#Spring
 spring:
   application:
     name: customer
@@ -16,3 +18,10 @@ spring:
       hibernate:
         format_sql: true
     show_sql: true
+#Eureka-Client
+eureka:
+  client:
+    service-url:
+      defaultZone: http://localhost:8761/eureka
+    fetch-registry: true
+    register-with-eureka: true
