--- a/pom.xml
+++ b/pom.xml
@@ -13,6 +13,7 @@
     <module>product</module>
     <module>orders</module>
     <module>eureka-server</module>
+    <module>gateway</module>
   </modules>
 
   <name>microservices</name>
