--- a/customer/src/main/resources/application.yml
+++ b/customer/src/main/resources/application.yml
@@ -7,6 +7,8 @@ server:
 spring:
   application:
     name: customer
+  zipkin:
+    baseUrl: http://localhost:9411
   datasource:
     url: jdbc:mysql://localhost:3307/customer
     username: root
