--- a/eureka-server/src/main/resources/application.yml
+++ b/eureka-server/src/main/resources/application.yml
@@ -5,6 +5,8 @@ server:
 spring:
   application:
     name: eureka-server
+  zipkin:
+    baseUrl: http://localhost:9411
 #Eureka-Server
 eureka:
   client:
