--- a/product/src/main/resources/application.yml
+++ b/product/src/main/resources/application.yml
@@ -5,6 +5,8 @@ server:
 spring:
   application:
     name: product
+  zipkin:
+    baseUrl: http://localhost:9411
   datasource:
     url: jdbc:mysql://localhost:3307/product
     username: root
