--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -19,6 +19,14 @@ services:
       - "9411:9411"
     networks:
       - spring
+  rabbitmq:
+    image: rabbitmq:3.9.20-management-alpine
+    container_name: rabbitmq
+    ports:
+      - "5672:5672"
+      - "15672:15672"
+    networks:
+      - spring
 networks:
   mysql:
     driver: bridge
