--- a/notification/pom.xml
+++ b/notification/pom.xml
@@ -8,7 +8,7 @@
         <version>1.0-SNAPSHOT</version>
     </parent>
     <modelVersion>4.0.0</modelVersion>
-
+    <packaging>jar</packaging>
     <artifactId>notification</artifactId>
 
     <properties>
@@ -60,9 +60,8 @@
         </dependency>
         <dependency>
             <groupId>com.ntloc</groupId>
-            <artifactId>customer</artifactId>
+            <artifactId>feign-client</artifactId>
             <version>1.0-SNAPSHOT</version>
-            <scope>compile</scope>
         </dependency>
 <!--        Import the class from another module to your module perform action-->
     </dependencies>
@@ -77,8 +76,8 @@
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-compiler-plugin</artifactId>
                 <configuration>
-                    <source>${maven.compiler.source}</source>
-                    <target>${maven.compiler.target}</target>
+                    <source>16</source>
+                    <target>16</target>
                     <annotationProcessorPaths>
                         <path>
                             <groupId>org.mapstruct</groupId>
