--- a/customer/pom.xml
+++ b/customer/pom.xml
@@ -58,6 +58,7 @@
             <groupId>com.ntloc</groupId>
             <artifactId>feign-client</artifactId>
             <version>1.0-SNAPSHOT</version>
+            <scope>compile</scope>
         </dependency>
     </dependencies>
 
