--- a/notification/pom.xml
+++ b/notification/pom.xml
@@ -62,6 +62,7 @@
             <groupId>com.ntloc</groupId>
             <artifactId>feign-client</artifactId>
             <version>1.0-SNAPSHOT</version>
+            <scope>compile</scope>
         </dependency>
 <!--        Import the class from another module to your module perform action-->
     </dependencies>
