build-image-run-microservices-docker-compose.yml

--- a/eureka-server/pom.xml
+++ b/eureka-server/pom.xml
@@ -48,4 +48,21 @@
         </plugins>
     </build>
 
+    <profiles>
+        <profile>
+            <id>jib-build-push-docker-image</id>
+            <activation>
+                <activeByDefault>false</activeByDefault>
+            </activation>
+            <build>
+                <plugins>
+                    <plugin>
+                        <groupId>com.google.cloud.tools</groupId>
+                        <artifactId>jib-maven-plugin</artifactId>
+                    </plugin>
+                </plugins>
+            </build>
+        </profile>
+    </profiles>
+
 </project>
