--- a/customer/src/main/resources/application.yml
+++ b/customer/src/main/resources/application.yml
@@ -18,10 +18,10 @@ spring:
       hibernate:
         format_sql: true
     show_sql: true
-  zipkin:
-    baseUrl: http://localhost:9411
-  rabbitmq:
-    addresses: localhost:5672
+#  zipkin:
+#    baseUrl: http://localhost:9411
+#  rabbitmq:
+#    addresses: localhost:5672
 #Eureka-Client
 eureka:
   client:
