--- a/notification/pom.xml
+++ b/notification/pom.xml
@@ -101,4 +101,22 @@
         </plugins>
     </build>
 
+    <profiles>
+        <profile>
+            <id>jib-build-push-docker-image</id>
+            <activation>
+                <activeByDefault>false</activeByDefault>
+            </activation>
+            <build>
+                <plugins>
+                    <plugin>
+                        <groupId>com.google.cloud.tools</groupId>
+                        <artifactId>jib-maven-plugin</artifactId>
+                    </plugin>
+                </plugins>
+            </build>
+        </profile>
+    </profiles>
+
+
 </project>
