--- a/orders/src/main/resources/application.yml
+++ b/orders/src/main/resources/application.yml
@@ -1,12 +1,12 @@
+#Server
 server:
   port: 8030
   error:
     include-message: always
+#Spring
 spring:
   application:
     name: orders
-  zipkin:
-    baseUrl: http://localhost:9411
   datasource:
     url: jdbc:mysql://localhost:3307/orders
     username: root
@@ -18,6 +18,10 @@ spring:
       hibernate:
         format_sql: true
     show_sql: true
+  zipkin:
+    baseUrl: http://localhost:9411
+  rabbitmq:
+    addresses: localhost:5672
 #Eureka-Client
 eureka:
   client:
