--- a/pom.xml
+++ b/pom.xml
@@ -35,6 +35,7 @@
     <spring.boot.maven.plugin.version>2.6.4</spring.boot.maven.plugin.version>
     <spring.boot.dependencies.version>2.6.4</spring.boot.dependencies.version>
     <spring.cloud.dependencies.version>2021.0.1</spring.cloud.dependencies.version>
+    <image>ntloc/${project.artifactId}:${project.version}</image>
   </properties>
 
   <!--  All sub-module can pick one of list spring dependencies in there pom.xml -->
@@ -94,6 +95,29 @@
           <artifactId>maven-compiler-plugin</artifactId>
           <version>${maven.compiler.version}</version>
         </plugin>
+        <plugin>
+          <groupId>com.google.cloud.tools</groupId>
+          <artifactId>jib-maven-plugin</artifactId>
+          <version>3.2.0</version>
+          <configuration>
+            <from>
+              <image>openjdk:17-alpine</image>
+            </from>
+            <to>
+              <tags>
+                <tag>latest</tag>
+              </tags>
+            </to>
+          </configuration>
+          <executions>
+            <execution>
+              <phase>package</phase>
+              <goals>
+                <goal>build</goal>
+              </goals>
+            </execution>
+          </executions>
+        </plugin>
       </plugins>
     </pluginManagement>
     <plugins>
@@ -107,4 +131,5 @@
       </plugin>
     </plugins>
   </build>
+
 </project>
