--- a/product/src/main/resources/application-docker.yml
+++ b/product/src/main/resources/application-docker.yml
@@ -8,7 +8,7 @@ spring:
   application:
     name: product
   datasource:
-    url: jdbc:mysql://localhost:3307/product
+    url: jdbc:mysql://mysql-db:3306/product
     username: root
     password: password
   jpa:
@@ -19,13 +19,13 @@ spring:
         format_sql: true
     show_sql: true
   zipkin:
-    baseUrl: http://localhost:9411
+    baseUrl: http://zipkin:9411
   rabbitmq:
-    addresses: localhost:5672
+    addresses: rabbitmq:5672
 #Eureka-Client
 eureka:
   client:
     service-url:
-      defaultZone: http://localhost:8761/eureka
+      defaultZone: http://eureka-server:8761/eureka
     fetch-registry: true
     register-with-eureka: true
