--- a/feign-client/src/main/resources/client-kube.properties
+++ b/feign-client/src/main/resources/client-kube.properties
@@ -1,4 +1,4 @@
-client.customer.url=http://customer:8010
-client.product.url=http://product:8020
-client.orders.url=http://orders:8030
-client.notification.url=http://notification:8040
+client.customer.url=http://customer
+client.product.url=http://product
+client.orders.url=http://orders
+client.notification.url=http://notification
