--- a/kubernetes/minikube/services/notification/service.yml
+++ b/kubernetes/minikube/services/notification/service.yml
@@ -6,6 +6,6 @@ spec:
   selector:
     app: notification # has to match .metadata.labels.app && template.metadata.labels.app of deployment || stafulset
   ports:
-    - port: 8040
+    - port: 80
       targetPort: 8040 # has to match containerPort of deployment || stafulset
-  type: NodePort #IP address
+  type: ClusterIP #IP address
