--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -19,9 +19,10 @@ jobs:
         ports:
           - 3306:3306
         options: --health-cmd="mysqladmin ping" --health-interval=10s --health-timeout=5s --health-retries=5
-      run: mysql -u root -ppassword -e "CREATE DATABASE customer; CREATE DATABASE product; CREATE DATABASE orders; CREATE DATABASE notification;"
     steps:
     - uses: actions/checkout@v3
+    - name: Set up DB
+      run: mysql -u root -ppassword -e "CREATE DATABASE customer; CREATE DATABASE product; CREATE DATABASE orders; CREATE DATABASE notification;"
     - name: Set up JDK 17
       uses: actions/setup-java@v3
       with:
